styles/leaderboard-page.css
.pending-carat {
  display: none !important;
}

.category-tab {
  display: block !important;
  margin-right: 0 !important;
  border-radius: 0 !important;
  width: 100%;
}

.category-tab.active {
 background-color: rgba(0, 0, 0, 0.75) !important;
}

.category-tab-name {
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

#centerwidget {
  width: calc(100% - 316px) !important;
}

#widget {
  width: 316px !important;
}

#leaderboardform {
  display: flex;
  flex-direction: row;
  border-radius: 0;
}

#leaderboardform > div:first-of-type {
  position: relative;
  width: 100% !important;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: column;
}

#leaderboardform > .color-panel {
  flex-grow: 1;
  min-width: 0;
  align-self: stretch;
}

.color-panel {
  border-radius: 0 !important;
}

div[component-name="GameRecentRunsSidebar"] tr td:last-of-type,
div[component-name="GameRecentRunsSidebar"] tr th:last-of-type {
  display: none;
}

.game-metadata-container {
  font-size: 14px !important;
}

.gamemenu-item {
  font-size: 14px !Important;
}

/** v2 **/

.container {
  width: 100% !important;
  max-width: 100vw;
}

#centerwidget {
  padding: 0 !important;
}

#widget.col-auto {
  display: grid;
  grid-template-columns: 1fr;
  padding: 0 !important;
  border-radius: 0 !important;
}

#widget.col-auto .widget-container {
  border-left: 3px solid rgb(34, 37, 34);
  margin-bottom: 0;
}

#profile-menu,
.desktop_sidebar_a {
  margin-bottom: 0 !important;
}

.maincontent {
  border-top: 3px solid rgb(34, 37, 34);
}

#centerwidget {
  display: grid;
  grid-auto-flow: dense;
  grid-template-columns: [categories] max-content [leaderboard] 1fr;
  grid-template-rows: max-content 1fr;
}

.maincontent,
#leaderboardform {
  display: contents;
}

#leaderboardform > div:first-of-type {
  grid-column: categories / categories;
  height: 100%;
  background-color: rgba(32, 32, 32, 0.8);
}

#leaderboardform > div:first-of-type > a {
  max-width: 200px;
  overflow-x: hidden;
}

#leaderboardform > .color-panel {
  grid-column: leaderboard / leaderboard;
  grid-row: span 2;
}

#profile-menu {
  position: sticky;
  top: 56px;
  grid-column: span 2;
  height: max-content;
  max-height: max-content;
  border-radius: 0;
  z-index: 9999;
}

.profile-menu-sticky {
  background-color: #222 !important;
}

.moderator-widget {
  grid-row: 1;
}

#leaderboarddiv td {
  font-size: 13px;
}

.src-page-leaderboard .row {
  display: grid;
  grid-template-columns: 1fr max-content;
}

.src-page-leaderboard .row div:first-child {
  grid-column: 1 / -1;
}

.src-page-leaderboard #centerwidget {
  width: 100% !important;
}

.src-page-leaderboard #widget.col-auto {
  width: min-content !important;
}

